--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@prisma/client": "^6.14.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "prisma-extension-pagination": "^0.7.5"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.12",
