--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "prisma-extension-pagination": "^0.7.5"
+    "prisma-extension-pagination": "^0.7.5",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.12",
