--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "prisma-extension-pagination": "^0.7.5",
     "zod": "^4.0.17"
   },
