--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mvc-prisma",
+  "name": "express-prisma",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -14,28 +14,38 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shinder/express-mvc-prisma.git"
+    "url": "git+https://github.com/shinder/express-prisma.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shinder/express-mvc-prisma/issues"
+    "url": "https://github.com/shinder/express-prisma/issues"
   },
-  "homepage": "https://github.com/shinder/express-mvc-prisma#readme",
+  "homepage": "https://github.com/shinder/express-prisma#readme",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^2.0.2",
     "prisma-extension-pagination": "^0.7.5",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.12",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^24.3.0",
     "concurrently": "^9.2.0",
     "daisyui": "^5.0.50",
