--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
     "prisma-extension-pagination": "^0.7.5",
+    "session-file-store": "^1.5.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
@@ -48,6 +48,7 @@
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "^24.3.0",
+    "@types/session-file-store": "^1.2.5",
     "concurrently": "^9.2.0",
     "daisyui": "^5.0.50",
     "nodemon": "^3.1.10",
