--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/session-file-store": "^1.2.5",
     "concurrently": "^9.2.0",
