--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-# express 使用的通訊埠
-PORT=3005
-
+# 資料庫連接
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/shin02"
 
+# 伺服器設定
+PORT=3005
+
+# CORS 設定 - 前端允許的網域
+FRONTEND_URL="https://your-production-domain.com"
+
+# Session 設定
+SESSION_SECRET="your-session-secret-key-here"
+SESSION_PATH="./sessions"
+
+# JWT 設定
 JWT_SECRET=hjsJJH74727jshdgsj8388678
+JWT_EXPIRES_IN="24h"
+
+# 環境設定
+NODE_ENV="development"
