--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tailwindcss/cli": "^4.1.12",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
